jekyll: switch to custom Primer Light theme 1ca24a4
https://github.com/decredcommunity/jekyll-themes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Decred Journal
-description: Monthly digest
-theme: jekyll-theme-cayman
-github:
-  is_project_page: false
+description: Detailed monthly reports of Decred development, network and social stats, ecosystem growth and new media content
+theme: jekyll-theme-primer
+permalink: :title
